# mono

./: AGENT.md  Cargo.toml  README.md
src/: config.rs  main.rs
