[package]
name = "monorepo-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
serde = { version = "1.0", features = ["derive"] } # Serialization for config
serde_json = "1.0"                                # JSON handling for config
